# boss-job-helper

./: .gitignore  README.md  environment.yml  package-lock.json  package.json
apps/extension/: index.html  manifest.config.ts  package.json  popup.html  tsconfig.json  vite.config.ts
apps/extension/src/: vite-env.d.ts
apps/extension/src/background/: automationController.test.ts  automationController.ts  main.ts
apps/extension/src/content/: FloatingPanel.test.tsx  FloatingPanel.tsx  autoApply.test.ts  autoApply.ts  bossAdapter.test.ts  bossAdapter.ts  main.test.tsx  main.tsx
apps/extension/src/content/fixtures/: boss-list.html
apps/extension/src/dashboard/: App.test.tsx  App.tsx
apps/extension/src/popup/: Popup.test.tsx  Popup.tsx  main.tsx
apps/extension/src/shared/: aiConfigStorage.test.ts  aiConfigStorage.ts  localApiClient.test.ts  localApiClient.ts  types.ts
apps/local-service/: pyproject.toml
apps/local-service/job_apply_assistant/: ai_client.py  api.py  apply_queue.py  main.py  matching.py  models.py  resume_parser.py  storage.py
apps/local-service/tests/: test_ai_client.py  test_api.py  test_apply_queue.py  test_matching.py  test_models.py  test_resume_parser.py  test_storage.py
docs/: dev-runbook.md
docs/images/: README.md
docs/superpowers/plans/: 2026-06-06-boss-job-apply-assistant.md
docs/superpowers/specs/: 2026-06-06-boss-job-apply-assistant-design.md
tests/: repo_layout.test.mjs
